# TanaChat

./: .env.example  .eslintrc.json  .gitignore  .gitleaks.toml  .gitleaksignore  .prettierrc.json  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  LICENSE  Makefile  README.md  app-do-domains-update.yaml  app-do-domains.yaml  app-do.yaml  asyncapi.yaml  claude_desktop_config.json  docker-compose.do.yml  docker-compose.override.yml  docker-compose.yml  gitleaks-full-report.json  mcp-do-docr.yaml  mcp-do-domains.yaml  mcp-do-update.yaml  mcp-do.yaml  pyproject.toml  requirements.txt  test_password_api.py  warp.md
.claude/agents/: ArchitectDeveloperAgent.md  IssueAgent.md  SpecWriterAgent.md  TestCodeReviewAgent.md
.claude/commands/: issue.md  pr.md  review.md  spec.md  work.md
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  spec.md  tana_integration.md
api/: Dockerfile  README.md  asyncapi.yaml  openapi.yaml  pyproject.toml
api/src/: __init__.py  config.py  dependencies.py  main.py
api/src/models/: __init__.py  metadata.py  tana.py  user.py
api/src/routers/: __init__.py  auth.py  health.py  spaces.py  tana.py
api/src/services/: __init__.py  simple_auth.py  spaces_client.py  tana_service.py  tana_validator.py
app/: .dockerignore  Dockerfile  Dockerfile.do  eslint.config.js  index.html  nginx-site.conf  nginx.conf  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
docs/: DEVELOPMENT.md  LOCAL_DEVELOPMENT.md  MCP_CLIENT_SETUP.md  architecture.md  cli-commands.md  deployment-digitalocean.md  design.md  environment-variables.md  index.md  password-api.md  project-flow.md  status.md  tana-tools.md  testing.md
lib/: README.md  __init__.py  keytags_manager.py  tana_importer.py  tana_io.py  tana_json_parser.py  tana_parser.py  workspace_keytags_manager.py
local/: README.md  docker-compose.yml  local-docker-app.yml  local-docker-mcp.yml  setup-localstack.sh
mcp/: .dockerignore  Dockerfile.do  Dockerfile.simple  pyproject.toml  test_real_functionality.py
mcp/lib/: README.md  __init__.py  colors.py  s3_user_manager.py  user_manager.py
mcp/src/: __init__.py  config.py  health.py  main.py  main_old.py  server.py
mcp/src/resources/: __init__.py
mcp/src/tools/: __init__.py  auth.py  spaces.py  tana.py
mcp/src/utils/: __init__.py  essential_setup.py  spaces_setup.py
samples/: README.md
scripts/: backup-spaces.sh  backup.sh  build-and-deploy.sh  build.sh  deploy-api.sh  deploy-mcp.sh  deploy-www.sh  deploy.sh  dev.sh  generate-samples.py  lint.sh  mcp-debug.sh  mcp-test.sh  restore-spaces.sh  security-check.sh  seed-samples.sh  setup.sh  sync-spaces.sh  test-local-deployment.sh  test.sh  validate-samples.sh
tests/: .env.test  test-all-local.py  test-all-production.py  test_integration.py  test_tana_keytags.py  test_utils.py
(+91 files in other folders)
