[project]
name = "tanachat-mcp"
version = "0.1.0"
description = "FastMCP server for TanaChat"
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.25.0",
    "pydantic>=2.4.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.24.0",
    "boto3>=1.34.0",
]
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
